out3_win.txt
.\build\lp.exe : example
s\__lp_03_memory_arena.c
: In function 
'lp_simulate_particle':
At line:1 char:1
+ .\build\lp.exe example
s\03_memory_arena.lp -c 
03.exe > out3.txt 2>&1
+ ~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo      
        : NotSpecified  
  : (examples\__lp_0.   
 ..late_particle'::S    
tring) [], RemoteEx    
ception
    + FullyQualifiedErr 
   orId : NativeComman  
  dError
 
examples\__lp_03_memory_
arena.c:18:10: error: 
variable or field 
'lp_p' declared void
   18 |     void lp_p = 
lp_memory_cast(lp_p_ptr,
 lp_Particle);
      |          ^~~~
examples\__lp_03_memory_
arena.c:18:17: error: 
implicit declaration of 
function 
'lp_memory_cast' [-Wimpl
icit-function-declaratio
n]
   18 |     void lp_p = 
lp_memory_cast(lp_p_ptr,
 lp_Particle);
      |                 
^~~~~~~~~~~~~~
examples\__lp_03_memory_
arena.c:18:42: error: 
'lp_Particle' 
undeclared (first use 
in this function); did 
you mean 
'LpObj_Particle'?
   18 |     void lp_p = 
lp_memory_cast(lp_p_ptr,
 lp_Particle);
      |                 
                        
 ^~~~~~~~~~~
      |                 
                        
 LpObj_Particle
examples\__lp_03_memory_
arena.c:18:42: note: 
each undeclared 
identifier is reported 
only once for each 
function it appears in
examples\__lp_03_memory_
arena.c:19:9: error: 
invalid type argument 
of '->' (have 'int')
   19 |     
lp_p->lp_life = 
(lp_p.life - 1);
      |         ^~
examples\__lp_03_memory_
arena.c:19:26: error: 
request for member 
'life' in something not 
a structure or union
   19 |     
lp_p->lp_life = 
(lp_p.life - 1);
      |                 
         ^
examples\__lp_03_memory_
arena.c:20:9: error: 
invalid type argument 
of '->' (have 'int')
   20 |     
lp_p->lp_velocity = 
(lp_p.velocity * 1.5);
      |         ^~
examples\__lp_03_memory_
arena.c:20:30: error: 
request for member 
'velocity' in something 
not a structure or union
   20 |     
lp_p->lp_velocity = 
(lp_p.velocity * 1.5);
      |                 
             ^
examples\__lp_03_memory_
arena.c:21:16: error: 
request for member 
'velocity' in something 
not a structure or union
   21 |     return 
lp_p.velocity;
      |                ^
[LP] Compilation failed 
(gcc exit 1)
